; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_processor_idle.c_acpi_idle_bm_rld_restore.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_processor_idle.c_acpi_idle_bm_rld_restore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACPI_BITREG_BUS_MASTER_RLD = common dso_local global i32 0, align 4
@saved_bm_rld = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @acpi_idle_bm_rld_restore to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acpi_idle_bm_rld_restore() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @ACPI_BITREG_BUS_MASTER_RLD, align 4
  %3 = call i32 @acpi_read_bit_register(i32 %2, i64* %1)
  %4 = load i64, i64* %1, align 8
  %5 = load i64, i64* @saved_bm_rld, align 8
  %6 = icmp ne i64 %4, %5
  br i1 %6, label %7, label %11

7:                                                ; preds = %0
  %8 = load i32, i32* @ACPI_BITREG_BUS_MASTER_RLD, align 4
  %9 = load i64, i64* @saved_bm_rld, align 8
  %10 = call i32 @acpi_write_bit_register(i32 %8, i64 %9)
  br label %11

11:                                               ; preds = %7, %0
  ret void
}

declare dso_local i32 @acpi_read_bit_register(i32, i64*) #1

declare dso_local i32 @acpi_write_bit_register(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
